--- a/package.json
+++ b/package.json
@@ -50,13 +50,16 @@
     "webpack": "4.19.1",
     "webpack-dev-server": "3.1.9",
     "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "3.6.2"
+    "workbox-webpack-plugin": "3.6.2",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.0.4"
   },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
+  "proxy": "http://47.100.29.47:8580/",
   "eslintConfig": {
     "extends": "react-app"
   },
